# dvc-pandas

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/dvc_pandas/: __init__.py  dataset.py  datasets.py  dvc.py  git.py  pandas.py  repository.py  utils.py
tests/: conftest.py  dir_helpers.py  test_dataset.py  test_datasets.py  test_repository.py
