[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = flake8, py37

[testenv]
deps =
    pytest
    pytest-xdist
commands = pytest

[testenv:flake8]
deps = flake8
commands = flake8 src tests setup.py
"""
