[metadata]
name = dvc-pandas
version = 0.0.2
author = Bernhard Bliem
author_email = bernhard.bliem@kausal.tech
description = Wrapper for DVC and git to easily fetch Pandas dataframes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kausaltech/dvc-pandas
project_urls =
    Bug Tracker = https://github.com/kausaltech/dvc-pandas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.6
install_requires =
    GitPython
    appdirs
    dvc[s3]
    fastparquet
    pandas
    python-snappy
    ruamel.yaml

[options.packages.find]
where = src
