[metadata]
name = dvc-pandas
version = 0.1.0
author = Bernhard Bliem
author_email = bernhard.bliem@kausal.tech
description = Wrapper for DVC and git to easily fetch Pandas dataframes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kausaltech/dvc-pandas
project_urls =
    Bug Tracker = https://github.com/kausaltech/dvc-pandas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7
install_requires =
    GitPython
    appdirs
    dvc
    dvc-s3
    fasteners
    pyarrow
    pandas
    pint-pandas
    python-snappy
    ruamel.yaml

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E203

[mypy]

[mypy-git]
ignore_missing_imports = True

[mypy-appdirs]
ignore_missing_imports = True

[mypy-pint_pandas]
ignore_missing_imports = True

[mypy-dvc.*]
ignore_missing_imports = True
